src/components/Card/Card.scss
.cards__item {
    width: 339px;
    min-height: 234px;

    background-color: #ffffff03;
    border-radius: 25px;
    box-shadow: 0px 0px 45.9px 0px rgba(0, 0, 0, 0.25);

    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);

    display: flex;
    flex-direction: column;

    cursor: default;
    user-select: none;

    transition: 0.3s;
    &:hover {
        background-color: #ffffff;
    }

    .cards__title {
        font-size: 32px;
        margin: 15px 25px 0 25px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        line-height: 38.73px;

        &::first-letter {
            text-transform: uppercase;
        }
    }
    .cards__paragraph {
        font-size: 12px;
        margin: 15px 25px;
        height: 150px;

        position: relative;

        overflow: auto;
        -ms-overflow-style: none;
        scrollbar-width: none;
        &::-webkit-scrollbar {
            width: 0;
            height: 0;
        }
    }
}

.selected {
    box-shadow: 0px 0px 45.9px 0px #ff2f54;
}

